addToClasspath